Fix nav-dropdown scrollbar

--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -124,7 +124,7 @@ input.button
         a
           display: inline-block
           &:first-of-type
-            padding: 0 0 0 20px
+            padding: 0 4px 0 20px
           &:last-of-type
             display: inline-block
             padding: 0 20px 0 0
