--- a/themes/vue/source/css/_header.styl
+++ b/themes/vue/source/css/_header.styl
@@ -43,6 +43,7 @@ body.docs
 
   .nav-dropdown
     overflow: hidden
+    overflow-y: auto
     .nav-link
       &:hover, &.current
         border-bottom: none
